--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.8.4",
+    "html-to-text": "^9.0.5",
     "html2pdf.js": "^0.10.3",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
@@ -26,6 +27,7 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
     "prettier": "^3.5.3",
+    "puppeteer": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
